--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,10 @@
+*main{
+	width:200px;
+	background-color:purple;
+	border-left: 5px solid green;
+	padding : 10px;
+	font-size : 20px;
+	color:white;
+	text-decoration:underline;
 
-/* Your CSS Code here. */
+}
