--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,9 @@
 .main{
 	width:200px;
 	background-color:purple;
-	border-left: 5px solid green;
+	border-color: green;
+    border-style: solid;
+    border-width: 0 0 0 5px;
 }
 
 .heading{
