--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,15 @@
 .main{
 	width:200px;
-	background-color:purple;
-	border-color: green;
-    border-style: solid;
-    border-width: 0 0 0 5px;
+	background-color:rgb(128, 0, 128);
+	border-left-width:5px;
+	border-left-color:rgb(0, 128, 0);
+	padding:10px;
+	
 }
 
-.heading{
-	padding:10px;
+#heading{
+	
 	font-size:20px;
-	color:white;
-	text-decoration:underline;
+	color:rgb(255, 255, 255);
+	
 }
