--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,8 @@
 .main{
 	width:200px;
 	background-color:rgb(128, 0, 128);
-	border-left-width:5px;
-	border-left-color:rgb(0, 128, 0);
-	padding:10px;
+	border-left:5px solid green;
+ 	padding:10px;
 	
 }
 
@@ -11,5 +10,6 @@
 	
 	font-size:20px;
 	color:rgb(255, 255, 255);
+	text-decoration:underline;
 	
 }
